Add Foreman 3.7.0 release notes

--- a/_includes/manuals/3.7/1.2_release_notes.md
+++ b/_includes/manuals/3.7/1.2_release_notes.md
@@ -4,16 +4,141 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Plugin translation infrastructure in frontend
+
+With this release it's possible for plugins to use translations in Javascript.
+Since the front end is largely moving towards Javascript, this is a great improvement for who care about an internationalized application.
+Note that having the infrastructure in place doesn't guarantee everything is translated.
+
+[#36330](https://projects.theforeman.org/issues/36330)
+
+#### Puma 6
+
+Puma has been updated to version 6, featuring [improved performance](https://github.com/puma/puma/blob/v6.0.0/6.0-Upgrade.md#improved-performance) compared to Puma 5.
+
+[#36357](https://projects.theforeman.org/issues/36357)
+
 ### Upgrade warnings
 
-### Deprecations
+#### Puppet 6 support dropped
+
+After a deprecation in Foreman 3.6, Puppet 6 is no longer supported.
+The installer will require at least 7.0.0.
+On the Smart Proxy side no changes have been made, but it is still recommended to upgrade.
+Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/c/x4KNOrHevgE) and no longer receives security updates.
+
+[#36345](https://projects.theforeman.org/issues/36345)
 
 ### Release Notes
+
+### Release notes for 3.7.0
+#### Foreman - Authentication
+* Foreman caps ldap auth source password length at 60 ([#36309](https://projects.theforeman.org/issues/36309))
+
+#### Foreman - DB migrations
+* Upgrade fails on db:seed step with error GraphQL::InvalidNameError: Names must match `/^[_a-zA-Z][_a-zA-Z0-9]\*$/` but 'RHEL OpenStack Platform' does not ([#36371](https://projects.theforeman.org/issues/36371))
+
+#### Foreman - Development tools
+* Document ansible-runner-env path config in Ansible development docs ([#36339](https://projects.theforeman.org/issues/36339))
+
+#### Foreman - Facts
+* Drop the socket fact chart ([#36058](https://projects.theforeman.org/issues/36058))
+
+#### Foreman - Host groups
+* Changing OS in hostgroup edit form reset partition table and media even when it is not necessary ([#36280](https://projects.theforeman.org/issues/36280))
+
+#### Foreman - Host registration
+* Register Host contains an invalid field error on user's arrival to the form ([#36312](https://projects.theforeman.org/issues/36312))
+* Register Host page contains \* on non-mandatory fields ([#36307](https://projects.theforeman.org/issues/36307))
+
+#### Foreman - Internationalization
+* Generate locale js files as pretty for smaller diffs on updates ([#36419](https://projects.theforeman.org/issues/36419))
+* Translated strings are not loaded for plugins into the browser, leading to react-based frontend not having translations ([#36330](https://projects.theforeman.org/issues/36330))
+* Reduce number of strings to translate ([#36321](https://projects.theforeman.org/issues/36321))
+* Setting descriptions are not translated ([#36088](https://projects.theforeman.org/issues/36088))
+
+#### Foreman - Inventory
+* show "not available" for Owner type in host details ([#36292](https://projects.theforeman.org/issues/36292))
+* Redirect when editing a host is not reliable ([#36265](https://projects.theforeman.org/issues/36265))
+* hosts names are hidden in small screens  ([#36263](https://projects.theforeman.org/issues/36263))
+* Host Detail button landed to old Host UI page ([#36225](https://projects.theforeman.org/issues/36225))
+
+#### Foreman - JavaScript stack
+* Move JS scripts to the layout's Body ([#36342](https://projects.theforeman.org/issues/36342))
+* Allow to pass custom error handler for submitForm ([#36232](https://projects.theforeman.org/issues/36232))
+* Replace the PF3 Spinner in common/LoadingPage with a PF4 one ([#36199](https://projects.theforeman.org/issues/36199))
+
+#### Foreman - Packaging
+* Allow apipie-rails 0.9/1.x ([#36375](https://projects.theforeman.org/issues/36375))
+* Upgrade Puma to 6.x ([#36357](https://projects.theforeman.org/issues/36357))
+* Pin sass version to 1.60.z to avoid node 14 dependency ([#36305](https://projects.theforeman.org/issues/36305))
+* allow newer prometheus-client gem versions ([#36262](https://projects.theforeman.org/issues/36262))
+
+#### Foreman - Parameters
+* Have a fixed-width font (Monospaced) for variables that need correct indentation ([#36366](https://projects.theforeman.org/issues/36366))
+
+#### Foreman - Plugin integration
+* Make translation domain registration part of plugin dsl ([#36331](https://projects.theforeman.org/issues/36331))
+
+#### Foreman - Reporting
+* Host installed packages report includes YAML document separator in CSV ([#36408](https://projects.theforeman.org/issues/36408))
+* Add installable errata to report templates ([#36228](https://projects.theforeman.org/issues/36228))
+* Include erratum issued date in Hosts Applied report template ([#36190](https://projects.theforeman.org/issues/36190))
+
+#### Foreman - Search
+* Passing invalid value to infrasturcture_facet search key leads to PG::InvalidTextRepresentation error ([#36394](https://projects.theforeman.org/issues/36394))
+* Searching hosts should be possible by PXE loader ([#35846](https://projects.theforeman.org/issues/35846))
+
+#### Foreman - Security
+* User without view_provisioning_templates permission is able to see the rendered template ([#36097](https://projects.theforeman.org/issues/36097))
+
+#### Foreman - Settings
+* Missing Tooltip in EditorNavbar ([#36192](https://projects.theforeman.org/issues/36192))
+* Input field for "Trusted hosts" rejects multiple values ([#36017](https://projects.theforeman.org/issues/36017))
+
+#### Foreman - Templates
+* Replace old buttons with PF4 buttons in template editor ([#36050](https://projects.theforeman.org/issues/36050))
+
+#### Foreman - Unattended installations
+* Ubuntu installs do not enable upgrade repos by default anymore ([#36229](https://projects.theforeman.org/issues/36229))
+* iPXE provisioning template for Ubuntu autoinstall ([#36180](https://projects.theforeman.org/issues/36180))
+* Add parameter to install additional packages during kickstart/autoyast ([#36177](https://projects.theforeman.org/issues/36177))
+* Expired token should return 401 instead of 412 ([#35068](https://projects.theforeman.org/issues/35068))
+
+#### Foreman - VM management
+* Can't query plugin CRs via GraphQL ([#36370](https://projects.theforeman.org/issues/36370))
+
+#### Installer
+* Sunsetting foreman_column_view because functionality being integrated in Foreman itself ([#36377](https://projects.theforeman.org/issues/36377))
+* Drop Puppet 6 support ([#36345](https://projects.theforeman.org/issues/36345))
+
+#### Installer - Foreman modules
+* Update documentation for change from puppet master to server ([#35933](https://projects.theforeman.org/issues/35933))
+
+#### Installer - foreman-installer script
+* Installer --reset-data fails on an external DB setup ([#36238](https://projects.theforeman.org/issues/36238))
+
+#### Packaging - Debian/Ubuntu
+* ruby-foreman-templates DEB package includes old versions of git and diffy GEMs ([#36405](https://projects.theforeman.org/issues/36405))
+
+#### Packaging - RPMs
+* Depend on grub2-efi-x64 in foreman_bootdisk ([#36223](https://projects.theforeman.org/issues/36223))
+
+#### Smart Proxy
+* Logging to journal causes duplicate log entries to appear ([#35921](https://projects.theforeman.org/issues/35921))
+
+#### Smart Proxy - TFTP
+* tftp initrd/vmlinux generation: curl malformed ([#36209](https://projects.theforeman.org/issues/36209))
+
+#### Smart Proxy - Templates
+* Return Foreman's API status code instead of 500 for proxies requests ([#36243](https://projects.theforeman.org/issues/36243))
+
+*A full list of changes in 3.7.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1685)*
 
 ### Contributors
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Ruzicka, Alex Fisher, Amit Upadhye, Anthony Somerset, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Christian Ruppert, Dirk Götz, Dirk Heinrichs, Dyrkon, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Frank Adaemmer, Ian Ballou, Jeremy Lenz, Jonas Trüstedt, Kamil Szubrycht, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Manuel Laug, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Nofar Alfassi, Oleh Fedorenko, Partha Aji, Pat Riehecky, Pavel Moravec, Peter Koprda, Quirin Pamp, Ron Lavi, Samir Jha, Sayan Das, Shim Shtein, William Clark, benjamin-robertson, kobybr, timdeluxe, Štefan Németh
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
