Update release notes for foreman 3.7.0-rc3

--- a/_includes/manuals/3.7/1.2_release_notes.md
+++ b/_includes/manuals/3.7/1.2_release_notes.md
@@ -58,6 +58,7 @@ Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/
 * Setting descriptions are not translated ([#36088](https://projects.theforeman.org/issues/36088))
 
 #### Foreman - Inventory
+* Legacy Hosts UI loaded when you navigate from the Host's VMRC Console button ([#36450](https://projects.theforeman.org/issues/36450))
 * show "not available" for Owner type in host details ([#36292](https://projects.theforeman.org/issues/36292))
 * Redirect when editing a host is not reliable ([#36265](https://projects.theforeman.org/issues/36265))
 * hosts names are hidden in small screens  ([#36263](https://projects.theforeman.org/issues/36263))
@@ -113,6 +114,8 @@ Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/
 * Drop Puppet 6 support ([#36345](https://projects.theforeman.org/issues/36345))
 
 #### Installer - Foreman modules
+* configure pulpcore-api with --max-requests to recycle workers before they leak too much memory ([#36438](https://projects.theforeman.org/issues/36438))
+* configure pulpcore gunicorn with --preload ([#36437](https://projects.theforeman.org/issues/36437))
 * Update documentation for change from puppet master to server ([#35933](https://projects.theforeman.org/issues/35933))
 
 #### Installer - foreman-installer script
