Update release notes and config for Foreman 3.7.0 GA

--- a/_includes/manuals/3.7/1.2_release_notes.md
+++ b/_includes/manuals/3.7/1.2_release_notes.md
@@ -32,6 +32,9 @@ Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/
 ### Release Notes
 
 ### Release notes for 3.7.0
+#### Foreman
+* "Add parameter" button's data-ouia-component-id is changing ([#36481](https://projects.theforeman.org/issues/36481))
+
 #### Foreman - Authentication
 * Foreman caps ldap auth source password length at 60 ([#36309](https://projects.theforeman.org/issues/36309))
 
@@ -112,6 +115,7 @@ Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/
 #### Installer
 * Sunsetting foreman_column_view because functionality being integrated in Foreman itself ([#36377](https://projects.theforeman.org/issues/36377))
 * Drop Puppet 6 support ([#36345](https://projects.theforeman.org/issues/36345))
+* Install Foreman Proxmox plugin using foreman-installer ([#36319](https://projects.theforeman.org/issues/36319))
 
 #### Installer - Foreman modules
 * configure pulpcore-api with --max-requests to recycle workers before they leak too much memory ([#36438](https://projects.theforeman.org/issues/36438))
