--- a/_includes/manuals/3.5/4.2.5_matchers.md
+++ b/_includes/manuals/3.5/4.2.5_matchers.md
@@ -129,7 +129,7 @@ Let's look a quick example situation: we need to configure RabbitMQ and have it 
 
 As you can see we're utilising a template variable within the parameter's string just like we would in a normal template file. The important part of this string, as we're sure you've gathered, is the "@host.name" element. This pulls the FQDN from Foreman's facts and inserts it into the string.
 
-More information regarding templates can be found [**on the wiki**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting). This page also contains the [**pre-existing functions and macros you can use in your templates and parameter classes.**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting#Functions-and-macros)
+More information regarding templates can be found in the [**Template Writing Reference**](https://docs.theforeman.org/{{ page.version }}/Managing_Hosts/index-foreman-el.html#Template_Writing_Reference_managing-hosts). This page also contains the [**pre-existing functions and macros you can use in your templates and parameter classes.**](https://docs.theforeman.org/{{ page.version }}/Managing_Hosts/index-foreman-el.html#Template_Macros_managing-hosts).
 
 #### Examples
 
