--- a/_includes/manuals/3.6/4.4.8.3_prov_windows.md
+++ b/_includes/manuals/3.6/4.4.8.3_prov_windows.md
@@ -41,7 +41,7 @@ Head to _Hosts > Provisioning Templates_ and edit the templates starting with `W
 Assign each of those templates to your Windows OS (does not apply to snippets).
 The naming of the templates is a suggestion and up to you. This does __not__ apply to snippets! There, the name is important.
 
-_Note:_ You can find more info about [Foreman Template Writing in the Wiki](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting).
+_Note:_ You can find more info about [Foreman Template Writing in the documentation](https://docs.theforeman.org/{{ page.version }}/Managing_Hosts/index-foreman-el.html#Template_Writing_Reference_managing-hosts).
 
 ##### Required templates
 __WAIK Finish__
