--- a/_includes/manuals/3.7/3.5.2_configuration_options.md
+++ b/_includes/manuals/3.7/3.5.2_configuration_options.md
@@ -222,7 +222,7 @@ Default: 60
 
 ##### interpolate_erb_in_parameters
 
-If _true_, Foreman variables will be exposed to the ENC. Check [Template Writing](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting) for a more comprehensive guide on how to create and use these variables in your ERB templates.
+If _true_, Foreman variables will be exposed to the ENC. Check [Template Writing Reference](https://docs.theforeman.org/{{ page.version }}/Managing_Hosts/index-foreman-el.html#Template_Writing_Reference_managing-hosts) for a more comprehensive guide on how to create and use these variables in your ERB templates.
 Default: true
 
 ##### ignore_facts_for_operatingsystem
