--- a/_includes/manuals/3.7/4.4.3_prov_templates.md
+++ b/_includes/manuals/3.7/4.4.3_prov_templates.md
@@ -33,7 +33,7 @@ The `<%` prefix without the equals sign (`=`) is a general code block that may c
     %>
     <%= a_variable %>
 
-Other examples of ERB syntax are given on the *Help* tab of the template editor, and many more examples are available on the [Template Writing](http://theforeman.org/projects/foreman/wiki/TemplateWriting) wiki page. The *Help* tab also lists available *Global methods (functions)* provided by Foreman such as `foreman_url` (the URL for unattended calls to Foreman), and `template_name`.
+Other examples of ERB syntax are given on the *Help* tab of the template editor, and many more examples are available on the [Template Writing Reference](https://docs.theforeman.org/{{ page.version }}/Managing_Hosts/index-foreman-el.html#Template_Writing_Reference_managing-hosts). The *Help* tab also lists available *Global methods (functions)* provided by Foreman such as `foreman_url` (the URL for unattended calls to Foreman), and `template_name`.
 
 The methods available on the provided `@host` variable are limited by default (when `safemode_render` is enabled) to prevent exploitation of Foreman through templates. The permitted methods on all types of objects can be found in the *Safe mode methods and variables* table under the *Help* tab.
 
