--- a/_includes/manuals/3.7/7.3_getting_help.md
+++ b/_includes/manuals/3.7/7.3_getting_help.md
@@ -1,4 +1,4 @@
-Please check the [Troubleshooting wiki page](http://projects.theforeman.org/projects/1/wiki/Troubleshooting) for solutions to the most common problems.  Otherwise, there are two primary methods of getting support for the Foreman: IRC and discussion forums.
+The two primary methods of getting support for Foreman are IRC and discussion forums.
 
 ### IRC
 We work on the [libera.chat](https://libera.chat/) servers. You can get general support in #theforeman, while development chat takes place in #theforeman-dev.
