--- a/_includes/manuals/3.6/4.3.9_smartproxy_tftp.md
+++ b/_includes/manuals/3.6/4.3.9_smartproxy_tftp.md
@@ -46,7 +46,7 @@ The setup is very simple, and may be performed manually if desired.
 
 ##### Setting Up Foreman
 
-In most cases, the default templates should work fine.  You do, however, need to make sure that a PXELinux or iPXE template is associated with your hosts.  See [Unattended Installations](http://projects.theforeman.org/projects/foreman/wiki/Unattended_installations) for details.  The template will be used to define the PXE configuration file when a host is enabled for build.
+In most cases, the default templates should work fine.  You do, however, need to make sure that a PXELinux or iPXE template is associated with your hosts.  See [Using PXE to Provision Hosts](https://docs.theforeman.org/{{ page.version }}/Provisioning_Hosts/index-foreman-el.html#Using_PXE_to_Provision_Hosts_provisioning) for details.  The template will be used to define the PXE configuration file when a host is enabled for build.
 
 ##### Workflow
 
