--- a/_includes/manuals/3.7/5.4.2_comms_proxy.md
+++ b/_includes/manuals/3.7/5.4.2_comms_proxy.md
@@ -13,7 +13,7 @@ In a simple setup, a single Puppet Certificate Authority (CA) can be used for au
 
 # if enabled, all communication would be verified via SSL
 # NOTE that both certificates need to be signed by the same CA in order for this to work
-# see http://theforeman.org/projects/smart-proxy/wiki/SSL for more information
+# see https://theforeman.org/manuals/{{page.version}}/index.html#4.3.10SSL for more information
 :ssl_certificate: /etc/puppetlabs/puppet/ssl/certs/FQDN.pem
 :ssl_ca_file: /etc/puppetlabs/puppet/ssl/certs/ca.pem
 :ssl_private_key: /etc/puppetlabs/puppet/ssl/private_keys/FQDN.pem
