Update Foreman 3.7 & nightly installer params

--- a/_includes/manuals/3.7/3.2.2_installer_options.md
+++ b/_includes/manuals/3.7/3.2.2_installer_options.md
@@ -178,6 +178,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_ovirt_provision' puppet module (<a href="https://github.com/theforeman/ovirt_provision_plugin">ovirt_provision_plugin</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-proxmox</td>
+        <td>Enable 'foreman_plugin_proxmox' puppet module (<a href="https://github.com/theforeman/foreman_proxmox">foreman_proxmox</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppet</td>
         <td>Enable 'foreman_plugin_puppet' puppet module (<a href="https://github.com/theforeman/foreman_puppet">foreman_puppet</a>)</td>
       </tr>
@@ -1529,7 +1533,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-cipher-suites</td>
-        <td>List of SSL ciphers to use in negotiation Defaults to [ 'TLS_RSA_WITH_AES_256_CBC_SHA256', 'TLS_RSA_WITH_AES_256_CBC_SHA', 'TLS_RSA_WITH_AES_128_CBC_SHA256', 'TLS_RSA_WITH_AES_128_CBC_SHA', ]</td>
+        <td>List of SSL ciphers to use in negotiation Defaults to ['TLS_AES_128_GCM_SHA256', 'TLS_AES_256_GCM_SHA384', 'TLS_DHE_RSA_WITH_AES_128_GCM_SHA256', 'TLS_DHE_RSA_WITH_AES_256_GCM_SHA384', 'TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256', 'TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384', 'TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256', 'TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384']</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-common-modules-path</td>
