Update release notes to include Foreman 3.6.2

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -43,6 +43,29 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 
 ### Release Notes
 
+### Release notes for 3.6.2
+#### Foreman - Host registration
+* global registration should not create hosts as "managed" or "to be built" ([#36393](https://projects.theforeman.org/issues/36393))
+
+#### Foreman - Inventory
+* Redirect when editing a host is not reliable ([#36265](https://projects.theforeman.org/issues/36265))
+* hosts names are hidden in small screens  ([#36263](https://projects.theforeman.org/issues/36263))
+* Host Detail button landed to old Host UI page ([#36225](https://projects.theforeman.org/issues/36225))
+
+#### Foreman - Packaging
+* Pin sass version to 1.60.z to avoid node 14 dependency ([#36305](https://projects.theforeman.org/issues/36305))
+
+#### Foreman - Tests
+* Pin minitest &lt; 5.19 to resolve test failures ([#36617](https://projects.theforeman.org/issues/36617))
+
+#### Installer - foreman-installer script
+* katello-certs-check does not cause the installer to halt execution on failure ([#36567](https://projects.theforeman.org/issues/36567))
+
+#### Packaging - Debian/Ubuntu
+* ruby-foreman-templates DEB package includes old versions of git and diffy GEMs ([#36405](https://projects.theforeman.org/issues/36405))
+
+*A full list of changes in 3.6.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1703)*
+
 ### Release notes for 3.6.1
 #### Installer - foreman-installer script
 * Upgrade from Foreman 3.5.2 to 3.6 shows class Certs::Puppet is already declared ([#36217](https://projects.theforeman.org/issues/36217))
