Add Foreman 3.8 headline features & upgrade warnings

--- a/_includes/manuals/3.8/1.2_release_notes.md
+++ b/_includes/manuals/3.8/1.2_release_notes.md
@@ -4,9 +4,19 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Removed installer duplicate parameters
+
+Both `--foreman-logging-layout` and `--puppet-server-foreman-url` are no longer needed.
+The logging layout is now derived from the logging type (`--foreman-logging-type`).
+The Foreman URL for puppetserver is now read from the Foreman Proxy setting (`--foreman-proxy-foreman-base-url`).
+The parameters still exist and can be specified, but the average user shouldn't need it.
+
 ### Upgrade warnings
 
-### Deprecations
+### Foreman Redis caching DB changed to 4
+
+Since Foreman 3.6 Foreman can be easily configured to use Redis for caching (using `--foreman-rails-cache-store type:redis`).
+Starting Foreman 3.8 this uses DB 4, instead of DB 0, to avoid potential conflicts with other software.
 
 ### Release Notes
 
