Update Foreman 3.8 release notes for RC2

--- a/_includes/manuals/3.8/1.2_release_notes.md
+++ b/_includes/manuals/3.8/1.2_release_notes.md
@@ -123,6 +123,7 @@ Starting Foreman 3.8 this uses DB 4, instead of DB 0, to avoid potential conflic
 * Reuse foreman_proxy::foreman_base_url value for puppet::server_foreman_url ([#36573](https://projects.theforeman.org/issues/36573))
 
 #### Installer - Foreman modules
+* Set ANSIBLE_PERMISSION_CLASSES as empty list to allow syncing collection repos on capsule without RBAC access to Galaxy endpoints ([#36709](https://projects.theforeman.org/issues/36709))
 * Change the default Foreman Redis cache DB to 4 ([#36645](https://projects.theforeman.org/issues/36645))
 * Puppet module for Puppet should use "allowlist" instead of "whitelist" ([#36620](https://projects.theforeman.org/issues/36620))
 * Automatically detect Foreman logging layout based on logging type ([#36582](https://projects.theforeman.org/issues/36582))
