Update Puppet compatibility matrix

--- a/_includes/manuals/3.0/3.1.3_puppet_versions.md
+++ b/_includes/manuals/3.0/3.1.3_puppet_versions.md
@@ -21,12 +21,12 @@ Foreman integrates with Puppet and Facter in a few places, but generally using a
   </tr>
   <tr>
     <td>5.x</td>
-    <td>Supported</td>
+    <td>Not supported</td>
     <td>Untested</td>
-    <td>Supported</td>
+    <td>Deprecated</td>
   </tr>
   <tr>
-    <td>6.x</td>
+    <td>6.x - 7.x</td>
     <td>Supported</td>
     <td>Untested</td>
     <td>Supported</td>
