--- a/_includes/manuals/3.6/3.1.3_puppet_versions.md
+++ b/_includes/manuals/3.6/3.1.3_puppet_versions.md
@@ -26,7 +26,13 @@ Foreman integrates with Puppet and Facter in a few places, but generally using a
     <td>Deprecated</td>
   </tr>
   <tr>
-    <td>6.x - 7.x</td>
+    <td>6.x</td>
+    <td>Deprecated</td>
+    <td>Untested</td>
+    <td>Deprecated</td>
+  </tr>
+  <tr>
+    <td>7.x</td>
     <td>Supported</td>
     <td>Untested</td>
     <td>Supported</td>
