Update releases notes for Foreman 3.8 GA

--- a/_includes/manuals/3.8/1.2_release_notes.md
+++ b/_includes/manuals/3.8/1.2_release_notes.md
@@ -4,6 +4,11 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Show failed resources in failed installation report
+
+A failed foreman-installer run will capture Puppet reports making it much easier to troubleshoot failures.
+Users will not have to rely on the installer log anymore, as the failure output should be sufficient.
+
 #### Removed installer duplicate parameters
 
 Both `--foreman-logging-layout` and `--puppet-server-foreman-url` are no longer needed.
@@ -32,6 +37,8 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release notes for 3.8.0
 #### Foreman
+* Some events are not visible even being triggered ([#36796](https://projects.theforeman.org/issues/36796))
+* CVE-2022-4130: Blind SSRF via Referer header ([#36768](https://projects.theforeman.org/issues/36768))
 * Add "last_checkin" attribute to Entitlements Template ([#30690](https://projects.theforeman.org/issues/30690))
 
 #### Foreman - API
@@ -81,6 +88,9 @@ The arguments are automatically migrated from the old settings to the new ones.
 * Drop power_manager models from autoload paths ([#36583](https://projects.theforeman.org/issues/36583))
 * Load Rails 6.1 defaults ([#35432](https://projects.theforeman.org/issues/35432))
 
+#### Foreman - Rake tasks
+* Count db:abort_if_pending_migrations as a setup rake task ([#36774](https://projects.theforeman.org/issues/36774))
+
 #### Foreman - Reporting
 * "Applicable errata" and "registered content hosts" reports syntax highlighting broken + applicable errata name needs changing ([#36587](https://projects.theforeman.org/issues/36587))
 * "Host - compare content hosts packages" report template should restrict or notify if Host 1\* and Host 2\* name are same ([#36244](https://projects.theforeman.org/issues/36244))
@@ -90,11 +100,19 @@ The arguments are automatically migrated from the old settings to the new ones.
 * use YAML.safe_load instead of YAML.load ([#36219](https://projects.theforeman.org/issues/36219))
 
 #### Foreman - Settings
+* CVE-2022-3874: OS command injection via ct_command and fcct_command ([#36759](https://projects.theforeman.org/issues/36759))
 * instance_id setting is not presistent. ([#36395](https://projects.theforeman.org/issues/36395))
 
+#### Foreman - Statistics
+* Report Template output generation can take hours to complete if the template is only about printing different host facts
+ ([#36715](https://projects.theforeman.org/issues/36715))
+
 #### Foreman - Templates
+* Safemode doesn't allow to access 'katello_agent_enabled?' ([#36717](https://projects.theforeman.org/issues/36717))
 * Introduce human readable form for Host - Statuses report template ([#36426](https://projects.theforeman.org/issues/36426))
+* kickstart_kernel_options snippet breaks UEFI VLAN tagged provisioning ([#36361](https://projects.theforeman.org/issues/36361))
 * Template load_resource - explain :joins, :preload and includes ([#36239](https://projects.theforeman.org/issues/36239))
+* "snippet" keyword causes error in search bar ([#35805](https://projects.theforeman.org/issues/35805))
 
 #### Foreman - Tests
 * Pin @adobe/css-tools package to 4.2.0 to build on NodeJS 12 ([#36656](https://projects.theforeman.org/issues/36656))
@@ -124,6 +142,7 @@ The arguments are automatically migrated from the old settings to the new ones.
 * Make new pf4 modal for adding personal access token ([#36001](https://projects.theforeman.org/issues/36001))
 
 #### Foreman - Web Interface
+* Typo in variable name in form for taxonomies ([#36791](https://projects.theforeman.org/issues/36791))
 * Remove dividers between navigation items ([#36571](https://projects.theforeman.org/issues/36571))
 * Navigation items don't open in a new tab on ctrl+click ([#36543](https://projects.theforeman.org/issues/36543))
 * Add line breaks to bookmarks if the name is too long ([#36350](https://projects.theforeman.org/issues/36350))
@@ -133,13 +152,18 @@ The arguments are automatically migrated from the old settings to the new ones.
 * Reuse foreman_proxy::foreman_base_url value for puppet::server_foreman_url ([#36573](https://projects.theforeman.org/issues/36573))
 
 #### Installer - Foreman modules
+* Allow setting (fc)ct_location ([#36812](https://projects.theforeman.org/issues/36812))
+* CVE-2023-4886: World readable tomcat server.xml contains passwords ([#36760](https://projects.theforeman.org/issues/36760))
 * Set ANSIBLE_PERMISSION_CLASSES as empty list to allow syncing collection repos on capsule without RBAC access to Galaxy endpoints ([#36709](https://projects.theforeman.org/issues/36709))
+* Expose candlepin logging parameter in the installer ([#36697](https://projects.theforeman.org/issues/36697))
 * Change the default Foreman Redis cache DB to 4 ([#36645](https://projects.theforeman.org/issues/36645))
 * Puppet module for Puppet should use "allowlist" instead of "whitelist" ([#36620](https://projects.theforeman.org/issues/36620))
 * Automatically detect Foreman logging layout based on logging type ([#36582](https://projects.theforeman.org/issues/36582))
 * Switch to puppetlabs vcsrepo for gitrepo tracking ([#35943](https://projects.theforeman.org/issues/35943))
 
 #### Installer - foreman-installer script
+* Drop Apache mpm_event MaxRequestPerChild values from tuning profiles ([#36784](https://projects.theforeman.org/issues/36784))
+* Show failed resources in failed installation report ([#36694](https://projects.theforeman.org/issues/36694))
 * katello-certs-check does not cause the installer to halt execution on failure ([#36567](https://projects.theforeman.org/issues/36567))
 * Allow enabling mod_status for better Apache monitoring ([#36311](https://projects.theforeman.org/issues/36311))
 
