Add 3.7.1 release notes

--- a/_includes/manuals/3.7/1.2_release_notes.md
+++ b/_includes/manuals/3.7/1.2_release_notes.md
@@ -142,6 +142,31 @@ Note that [Puppet 6 is end of life](https://groups.google.com/g/puppet-announce/
 
 *A full list of changes in 3.7.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1685)*
 
+### Release notes for 3.7.1
+#### Foreman
+* Wrong initrd extension for preseed_default_ipxe ([#36847](https://projects.theforeman.org/issues/36847))
+
+#### Foreman - Host groups
+* 500 error when loading Hostgroups page for Ansible Roles Manager user ([#36703](https://projects.theforeman.org/issues/36703))
+
+#### Foreman - Host registration
+* Global registration should not create hosts as "managed" or "to be built" ([#36393](https://projects.theforeman.org/issues/36393))
+
+#### Foreman - JavaScript stack
+* "Scrollbar test exception: TypeError" when loading any page ([#36093](https://projects.theforeman.org/issues/36093))
+
+#### Foreman - Reporting
+* "Applicable errata" and "registered content hosts" reports syntax highlighting broken + applicable errata name needs changing ([#36587](https://projects.theforeman.org/issues/36587))
+
+#### Foreman - Tests
+* Pin minitest &lt; 5.19 to resolve test failures ([#36617](https://projects.theforeman.org/issues/36617))
+* Add missing ouia-ids to all pf4 components ([#36470](https://projects.theforeman.org/issues/36470))
+
+#### Installer - foreman-installer script
+* katello-certs-check does not cause the installer to halt execution on failure ([#36567](https://projects.theforeman.org/issues/36567))
+
+*A full list of changes in 3.7.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1742)*
+
 ### Contributors
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
