dnf module: Use -y option
The installation guidelines use `-y` for all dnf/yum operations, except
for enabling the module. DNF support `-y` here as well, so we can use
it.

--- a/_includes/manuals/2.4/3.6_upgrade.md
+++ b/_includes/manuals/2.4/3.6_upgrade.md
@@ -141,8 +141,8 @@ If you're already on 12 or don't have the PostgreSQL server installed, you can c
 systemctl stop postgresql.service
 # https://bugzilla.redhat.com/1935301
 sed -i '/^data_directory =/d' /var/lib/pgsql/data/postgresql.conf
-dnf module reset postgresql
-dnf module install postgresql:12
+dnf -y module reset postgresql
+dnf -y module install postgresql:12
 dnf install postgresql-upgrade
 postgresql-setup --upgrade
 systemctl start postgresql.service
