--- a/_includes/manuals/3.0/2.1_quickstart_installation.md
+++ b/_includes/manuals/3.0/2.1_quickstart_installation.md
@@ -114,8 +114,8 @@ sudo yum -y install https://mirror.centos.org/centos/7/extras/x86_64/Packages/ce
   <p>Enable the Ruby 2.7 module:</p>
 
 {% highlight bash %}
-sudo dnf module reset ruby
-sudo dnf module enable ruby:2.7
+sudo dnf -y module reset ruby
+sudo dnf -y module enable ruby:2.7
 {% endhighlight %}
 </div>
 
