--- a/_includes/manuals/3.2/3.6_upgrade.md
+++ b/_includes/manuals/3.2/3.6_upgrade.md
@@ -125,8 +125,8 @@ dnf clean metadata
 Enable the Ruby 2.7 module:
 
 {% highlight bash %}
-dnf module reset ruby
-dnf module enable ruby:2.7
+dnf -y module reset ruby
+dnf -y module enable ruby:2.7
 {% endhighlight %}
 
 Next upgrade all Foreman packages:
