--- a/_includes/manuals/3.3/3.3.1_rpm_packages.md
+++ b/_includes/manuals/3.3/3.3.1_rpm_packages.md
@@ -36,8 +36,8 @@ To enable the optional repository on a RHEL 7 system using subscription-manager,
 
 The Ruby 2.7 module is required and is not the default stream for the Ruby module in EL8, therefore it must be enabled:
 
-    dnf module reset ruby
-    dnf module enable ruby:2.7
+    dnf -y module reset ruby
+    dnf -y module enable ruby:2.7
 
 ### Pre-requisites: Puppet
 
