--- a/_includes/manuals/3.6/3.3.1_rpm_packages.md
+++ b/_includes/manuals/3.6/3.3.1_rpm_packages.md
@@ -27,7 +27,7 @@ To set up the repository, foreman-release packages are provided which add a repo
 
     # EL8
     dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
-    dnf module enable foreman:el8
+    dnf -y module enable foreman:el8
 
 ### Signing
 
