--- a/_includes/manuals/3.7/2.1_quickstart_installation.md
+++ b/_includes/manuals/3.7/2.1_quickstart_installation.md
@@ -57,7 +57,7 @@ sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86
   <p>Enable the Foreman module:</p>
 
 {% highlight bash %}
-sudo dnf module enable foreman:el8
+sudo dnf -y module enable foreman:el8
 {% endhighlight %}
 </div>
 
