--- a/_includes/manuals/3.8/3.6_upgrade.md
+++ b/_includes/manuals/3.8/3.6_upgrade.md
@@ -90,13 +90,13 @@ dnf clean metadata
 If the Ruby 2.5 module was previously enabled, it must be reset:
 
 {% highlight bash %}
-dnf module reset ruby
+dnf -y module reset ruby
 {% endhighlight %}
 
 Enable the Foreman module:
 
 {% highlight bash %}
-dnf module enable foreman:el8
+dnf -y module enable foreman:el8
 {% endhighlight %}
 
 Next upgrade all Foreman packages:
